--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-electron-boiler",
   "version": "0.1.0",
   "private": true,
-  "main": "Public/main.js",
+  "main": "Public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
@@ -12,12 +13,23 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
+  "build": {
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-start": "electron ."
+    "electron-start": "electron .",
+    "preelectron-pack": "npm run build",
+    "electron-pack": "electron-builder --win -c.extraMetadata.main=build/electron.js"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "electron": "^11.1.1"
+    "electron": "^11.1.1",
+    "electron-builder": "^22.9.1",
+    "typescript": "^4.1.3"
   }
 }
